--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.3",
     "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.77.1"
