--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@react-navigation/native-stack": "^7.2.0",
         "@tanstack/react-query": "^5.66.3",
         "axios": "^1.7.9",
+        "date-fns": "^4.1.0",
         "react": "18.3.1",
         "react-native": "0.77.1",
         "react-native-asset": "^2.1.1",
