--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@react-navigation/native": "^7.0.14",
         "@react-navigation/native-stack": "^7.2.0",
         "@tanstack/react-query": "^5.66.3",
+        "@types/date-fns": "^2.5.3",
         "axios": "^1.7.9",
         "date-fns": "^4.1.0",
         "react": "18.3.1",
